@@ -5,7 +5,7 @@
  *	Created by:	Robert French
  *
  *	$Source$
- *	$Author: warmenhoven $
+ *	$Author: seanegan $
  *
  *	Copyright (c) 1987,1988 by the Massachusetts Institute of Technology.
  *	For copying and distribution information, see the file
@@ -16,7 +16,7 @@
 #include <internal.h>
 
 #ifndef lint
-static const char rcsid_ZSubscriptions_c[] = "$Id: ZSubs.c 2432 2001-10-03 19:38:28Z warmenhoven $";
+static const char rcsid_ZSubscriptions_c[] = "$Id: ZSubs.c 3295 2002-05-28 08:40:48Z seanegan $";
 #endif
 
 static Code_t Z_Subscriptions __P((register ZSubscription_t *sublist,
@@ -76,6 +76,7 @@ Z_Subscriptions(sublist, nitems, port, opcode, authit)
     ZNotice_t notice;
     char header[Z_MAXHEADERLEN];
     char **list;
+    char *recip;
     int hdrlen;
     int size_avail = Z_MAXPKTLEN-Z_FRAGFUDGE; /* space avail for data,
 						 adjusted below */
@@ -117,11 +118,12 @@ Z_Subscriptions(sublist, nitems, port, opcode, authit)
     for (i=0;i<nitems;i++) {
 	list[i*3] = sublist[i].zsub_class;
 	list[i*3+1] = sublist[i].zsub_classinst;
-	if (sublist[i].zsub_recipient && *sublist[i].zsub_recipient &&
-	    *sublist[i].zsub_recipient != '*')
-	    list[i*3+2] = ZGetSender();
-	else
-	    list[i*3+2] = "";
+	recip = sublist[i].zsub_recipient;
+	if (recip && *recip == '*')
+	  recip++;
+	if (!recip || (*recip != 0 && *recip != '@'))
+	  recip = ZGetSender();
+	list[i*3+2] = recip;
     }
 
     start = -1;
